Remove 19 Code Smells from project to satisfy sonar cloud